--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -72,9 +72,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/61d7002d6bb26efec18046908a6be20a7b6113c2/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/61d7002d6bb26efec18046908a6be20a7b6113c2/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/61d7002d6bb26efec18046908a6be20a7b6113c2/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +88,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/61d7002d6bb26efec18046908a6be20a7b6113c2/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/61d7002d6bb26efec18046908a6be20a7b6113c2">uiceds/cee-492-term-project-fall-2022-jakt@61d7002</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/97f6d3cee48984d2b1c77a5fcb662e6248323f07">uiceds/cee-492-term-project-fall-2022-jakt@97f6d3c</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -325,14 +325,14 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </p>
 <em>Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em>
 <p align="justify">
-<strong>Output:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
+<strong>Outcome:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
 </p>
 <p align="center">
 <img src="images/Figure%202.png" title="fig:" />
 </p>
 <em>Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-<strong>Output:</strong> 87% accuracy was obtained on the training data, with a loss of about 0.3
+<strong>Outcome:</strong> 87% accuracy was obtained on the training data, with a loss of about 0.3
 </p>
 <table>
 <colgroup>
@@ -341,8 +341,8 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;">[Prediction Matrix]</th>
-<th style="text-align: left;">[Description]</th>
+<th style="text-align: left;">Prediction Matrix</th>
+<th style="text-align: left;">Description</th>
 </tr>
 </thead>
 <tbody>
@@ -363,9 +363,9 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 <p align="center">
 <img src="images/Figure%203.png" title="fig:" />
 </p>
-<p><em>Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></p>
+<em>Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-<strong>Output:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
+<strong>Outcome:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
 <table>
 <colgroup>
@@ -374,8 +374,8 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;">[Prediction Matrix]</th>
-<th style="text-align: left;">[Description]</th>
+<th style="text-align: left;">Prediction Matrix</th>
+<th style="text-align: left;">Description</th>
 </tr>
 </thead>
 <tbody>
@@ -398,7 +398,7 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </p>
 <em>Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-<strong>Output:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
+<strong>Outcome:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
 <table>
 <colgroup>
@@ -407,8 +407,8 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;">[Prediction Matrix]</th>
-<th style="text-align: left;">[Description]</th>
+<th style="text-align: left;">Prediction Matrix</th>
+<th style="text-align: left;">Description</th>
 </tr>
 </thead>
 <tbody>
@@ -431,14 +431,14 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </p>
 <em>Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em>
 <p align="justify">
-<strong>Output:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
+<strong>Outcome:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
 </p>
 <p align="center">
 <img src="images/Figure%206.png" title="fig:" />
 </p>
 <em>Fig 6. Confusion matrix for case 3 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
 <p align="justify">
-<strong>Output:</strong> 78% accuracy was obtained on the training data, with a loss of about 0.5
+<strong>Outcome:</strong> 78% accuracy was obtained on the training data, with a loss of about 0.5
 </p>
 <table>
 <colgroup>
@@ -447,8 +447,8 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 </colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;">[Prediction Matrix]</th>
-<th style="text-align: left;">[Description]</th>
+<th style="text-align: left;">Prediction Matrix</th>
+<th style="text-align: left;">Description</th>
 </tr>
 </thead>
 <tbody>
