--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -72,9 +72,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +88,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/97f6d3cee48984d2b1c77a5fcb662e6248323f07/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/97f6d3cee48984d2b1c77a5fcb662e6248323f07">uiceds/cee-492-term-project-fall-2022-jakt@97f6d3c</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea">uiceds/cee-492-term-project-fall-2022-jakt@da4a0bb</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -323,14 +323,14 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 <p align="center">
 <img src="images/Figure%201.png" title="fig:" />
 </p>
-<em>Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em>
+<span class="center"><em>Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em></span>
 <p align="justify">
 <strong>Outcome:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
 </p>
 <p align="center">
 <img src="images/Figure%202.png" title="fig:" />
 </p>
-<em>Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
+<span class="center"><em>Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></span>
 <p align="justify">
 <strong>Outcome:</strong> 87% accuracy was obtained on the training data, with a loss of about 0.3
 </p>
@@ -363,7 +363,7 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 <p align="center">
 <img src="images/Figure%203.png" title="fig:" />
 </p>
-<em>Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
+<span class="center"><em>Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></span>
 <p align="justify">
 <strong>Outcome:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
@@ -396,7 +396,7 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 <p align="center">
 <img src="images/Figure%204.png" title="fig:" />
 </p>
-<em>Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
+<span class="center"><em>Fig 4. Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></span>
 <p align="justify">
 <strong>Outcome:</strong> 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
@@ -429,14 +429,14 @@ Having completed the model preparation and training, the open-source Sklearn <sp
 <p align="center">
 <img src="images/Figure%205.png" title="fig:" />
 </p>
-<em>Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em>
+<span class="center"><em>Fig 5. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em></span>
 <p align="justify">
 <strong>Outcome:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
 </p>
 <p align="center">
 <img src="images/Figure%206.png" title="fig:" />
 </p>
-<em>Fig 6. Confusion matrix for case 3 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em>
+<span class="center"><em>Fig 6. Confusion matrix for case 3 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></span>
 <p align="justify">
 <strong>Outcome:</strong> 78% accuracy was obtained on the training data, with a loss of about 0.5
 </p>
