Precditive_Modeling_Final [ci skip]
This build is based on
https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/commit/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b.

This commit was created by the following CI build and job:
https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/commit/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b/checks
https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/runs/3510172711

--- a/manuscript.html
+++ b/manuscript.html
@@ -72,9 +72,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +88,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/da4a0bbaf924f0fbc41a3f2f27bec653bafdb5ea">uiceds/cee-492-term-project-fall-2022-jakt@da4a0bb</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/fef03d682d2810bab3ea1a4d7123deedfbe1bf6b">uiceds/cee-492-term-project-fall-2022-jakt@fef03d6</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -482,6 +482,7 @@ Finally, the key lesson learnt is that the developed model is as good as the dat
 <p><span class="semibold">References:</span></p>
 <p>[1] Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, <em>2022</em></p>
 <p>[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, “A deep learning approach to flight delay prediction,” <em>2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. doi:10.1109/DASC.2016.7778092</em></p>
+<p>Reference to hyperlinks:</p>
 <div id="refs" class="references csl-bib-body" role="doc-bibliography">
 <div id="ref-tx7QnH2O" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">1. </div><div class="csl-right-inline"><strong>Keras documentation: The Sequential model</strong> <div class="csl-block">Keras Team</div> <a href="https://keras.io/guides/sequential_model/">https://keras.io/guides/sequential_model/</a></div>
