--- a/manuscript.html
+++ b/manuscript.html
@@ -53,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fb224e0a866a35088a99d3fc85fdbcd870ba2a15/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fb224e0a866a35088a99d3fc85fdbcd870ba2a15/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fb224e0a866a35088a99d3fc85fdbcd870ba2a15/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/70edffb3cbc33ddf5efc670a97144fb3d89fd13a/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/70edffb3cbc33ddf5efc670a97144fb3d89fd13a/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/70edffb3cbc33ddf5efc670a97144fb3d89fd13a/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -69,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/fb224e0a866a35088a99d3fc85fdbcd870ba2a15/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/70edffb3cbc33ddf5efc670a97144fb3d89fd13a/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/fb224e0a866a35088a99d3fc85fdbcd870ba2a15">uiceds/cee-492-term-project-fall-2022-jakt@fb224e0</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/70edffb3cbc33ddf5efc670a97144fb3d89fd13a">uiceds/cee-492-term-project-fall-2022-jakt@70edffb</a>
 on December 2, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -235,7 +235,7 @@ The project duration is further categorized into short-, medium- and long-term r
 The resulting dataset, as presented in Fig. 16 of the appendix, is processed to reveal critical features. A rough guess is that the features quantifying environmental conditions like temperature, wind chill, pressure, and humidity together with the road construction span affect the project duration as there is a considerable spread in their histogram distributions. It is assumed that the recorded values of these environmental features are an average over the entire project duration. Thus, given the average environmental conditions and the span of road construction, the developed model is expected to predict the class of the project’s completion time as short, medium, or long-term. Table 2 below shows the summary of features selected for the predictive model.
 </p>
 <p><span class="center"><img src="images/Fig%201.png" /></span>
-<span class="center"><em>Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset</em></span></p>
+<span class="semibold"><span class="center"><em>Fig. 1: Histogram plots showing spread of Temperature, Wind Chill, Pressure and Humidity in the selected dataset</em></span></span></p>
 <p><span class="semibold">Table 2: Extracted features for performing EDA</span>
 <img src="images/Table%202.png" /></p>
 <p><span class="semibold">2.2.1 Feature detection and EDA</span></p>
@@ -278,14 +278,46 @@ Additionally, the activation function between hidden layers was set to ReLU [14]
 <p align="justify">
 Having completed the model preparation and training, the open-source Sklearn [17] package was leveraged to calculate prediction metrics like precision, recall, and f-score for each class, on the test dataset and plot confusion matrix for visualization. The confusion matrix plots and accuracy metrics after testing the models on the various test and validation datasets are presented below.
 </p>
-|:———————-|
-|<img src="images/Fig%208.png" />|
-|<em>Fig 8. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively</em>|
-|
-<p align="justify">
-65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
+<p align="center">
+<img src="images/Figure%201.png" title="fig:" />
 </p>
-<div class="line-block"></div>
+<span class="center"><em>Fig 1. Confusion matrix for case 1 test dataset, with 3 hidden layers of 32, 64, and 128 neurons respectively</em></span>
+<p align="justify">
+<strong>Outcome:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
+</p>
+<p align="center">
+<img src="images/Figure%202.png" title="fig:" />
+</p>
+<span class="center"><em>Fig 3. Confusion matrix for case 2 test dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></span>
+<p align="justify">
+<strong>Outcome:</strong> 87% accuracy was obtained on the training data
+</p>
+<table>
+<colgroup>
+<col style="width: 37%" />
+<col style="width: 62%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Prediction Matrix</th>
+<th style="text-align: left;">Description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Precision</td>
+<td style="text-align: left;">0.35, 0.66, and 0.26 for short term, medium term and long term respectively</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Recall</td>
+<td style="text-align: left;">0.22, 0.72, 0.19, for short term, medium term and long term respectively</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Proportion of each class in original dataset</td>
+<td style="text-align: left;">25%, 65% and 0.1% for short term, medium term and long term respectively</td>
+</tr>
+</tbody>
+</table>
 <p align="center">
 <img src="images/Figure%203.png" title="fig:" />
 </p>
@@ -308,14 +340,6 @@ Having completed the model preparation and training, the open-source Sklearn [17
 <tr class="odd">
 <td style="text-align: left;">Precision</td>
 <td style="text-align: left;">0.34, 0.66, and 0.36 for short term, medium term and long term respectively</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Recall</td>
-<td style="text-align: left;">0.06, 0.95, 0.06, for short term, medium term and long term respectively</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Proportion of each class in original dataset</td>
-<td style="text-align: left;">25%, 65% and 0.1% for short term, medium term and long term respectively</td>
 </tr>
 </tbody>
 </table>
