--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -53,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f4beffa2d6fbc6d1578fb9efab47b0917af4873/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f4beffa2d6fbc6d1578fb9efab47b0917af4873/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f4beffa2d6fbc6d1578fb9efab47b0917af4873/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -69,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/3f4beffa2d6fbc6d1578fb9efab47b0917af4873/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/3f4beffa2d6fbc6d1578fb9efab47b0917af4873">uiceds/cee-492-term-project-fall-2022-jakt@3f4beff</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/6cfc9c2e9dad9134a917c87850c5e6e383728d7c">uiceds/cee-492-term-project-fall-2022-jakt@6cfc9c2</a>
 on December 2, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -436,13 +436,13 @@ For the following steps, the authors propose to explore other techniques for imp
 <span class="semibold"><span class="center"><em>Fig. 15: Figure showing data set before and after data wrangling</em></span></span></p>
 <p><img src="images/Fig%2016.png" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 16: Data set after adding project duration classification</em></span></span></p>
-<p><img src="images/Figu%2017.png" class="center" />
+<p><img src="images/Figu%2017.jpg" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 17: Transformed data in PCA coordinate frame</em></span></span></p>
-<p><img src="images/Figu%2018.png" class="center" />
+<p><img src="images/Figu%2018.jpg" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 18: Boxplots of transformed data in PCA coordinate frame</em></span></span></p>
-<p><img src="images/Figu%2019.png" class="center" />
+<p><img src="images/Figu%2019.jpg" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 19: Confusion matrix plots from R for case 2 test dataset, with 1 hidden layer of 32 neurons respectively</em></span></span></p>
-<p><img src="images/Figu%2020.png" class="center" />
+<p><img src="images/Figu%2020.jpg" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 20: Confusion matrix plots from R for case 2 validation dataset with 1 hidden layer of 32 neurons respectively</em></span></span></p>
 <!-- default theme -->
 
