--- a/manuscript.html
+++ b/manuscript.html
@@ -53,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/cbe938909b64c8bdc8738e72367560b350c01a85/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/cbe938909b64c8bdc8738e72367560b350c01a85/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/cbe938909b64c8bdc8738e72367560b350c01a85/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -69,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/6cfc9c2e9dad9134a917c87850c5e6e383728d7c/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/cbe938909b64c8bdc8738e72367560b350c01a85/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/6cfc9c2e9dad9134a917c87850c5e6e383728d7c">uiceds/cee-492-term-project-fall-2022-jakt@6cfc9c2</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/cbe938909b64c8bdc8738e72367560b350c01a85">uiceds/cee-492-term-project-fall-2022-jakt@cbe9389</a>
 on December 2, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -371,12 +371,12 @@ Having completed the model preparation and training, the open-source Sklearn [17
 <img src="images/Figure%205.png" class="center" />
 <span class="semibold"><span class="center"><em>Fig 12. Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively</em></span></span>
 <p align="justify">
-<strong>Outcome:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
+<strong>Outcome from Fig. 12:</strong> 65% accuracy was obtained on the training data, with a loss of about 0.9.The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset
 </p>
 <img src="images/Figure%206.png" class="center" />
 <span class="semibold"><span class="center"><em>Fig 13. Confusion matrix for case 3 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively</em></span></span>
 <p align="justify">
-<strong>Outcome:</strong> 78% accuracy was obtained on the training data, with a loss of about 0.5
+<strong>Outcome from Fig. 13:</strong> 78% accuracy was obtained on the training data, with a loss of about 0.5
 </p>
 <table>
 <colgroup>
@@ -429,7 +429,7 @@ For the following steps, the authors propose to explore other techniques for imp
 <p>[15] A Gentle Introduction To Sigmoid Function: https://machinelearningmastery.com/a-gentle-introduction-to-sigmoid-function/</p>
 <p>[16] Stochastic Gradient Descent — Clearly Explained !! https://towardsdatascience.com/stochastic-gradient-descent-clearly-explained-53d239905d31</p>
 <p>[17] sklearn.metrics.confusion_matrix: https://scikit-learn/stable/modules/generated/sklearn.metrics.confusion_matrix.html</p>
-<p><span class="semibold">Appendix:</span></p>
+<p><strong><strong>Appendix</strong></strong></p>
 <p><img src="images/Fig%2014.png" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 14: Summary of the cleaned dataset</em></span></span></p>
 <p><img src="images/Fig%2015.png" class="center" />
@@ -442,7 +442,7 @@ For the following steps, the authors propose to explore other techniques for imp
 <span class="semibold"><span class="center"><em>Fig. 18: Boxplots of transformed data in PCA coordinate frame</em></span></span></p>
 <p><img src="images/Figu%2019.jpg" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 19: Confusion matrix plots from R for case 2 test dataset, with 1 hidden layer of 32 neurons respectively</em></span></span></p>
-<p><img src="images/Figu%2020.jpg" class="center" />
+<p><img src="images/Fig%2020.jpg" class="center" />
 <span class="semibold"><span class="center"><em>Fig. 20: Confusion matrix plots from R for case 2 validation dataset with 1 hidden layer of 32 neurons respectively</em></span></span></p>
 <!-- default theme -->
 
